fix placeholders on ie?

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -264,3 +264,7 @@ table {
   @include font-size(12);
   color: #999;
 }
+
+input.placeholder, textarea.placeholder {
+  color: #aaa;
+}
